feat(StaticRouter): webapp 디렉토리에서 파일 읽도록 수정